--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "maskinput",
-	"version": "1.0.4",
+	"version": "1.0.5",
 	"description": "Masks the input strings",
 	"license": "MIT",
 	"keywords": [
@@ -26,16 +26,19 @@
 		"node": ">=0.10.0"
 	},
 	"scripts": {
-		"test": "xo && mocha"
+		"test": "standard && mocha"
 	},
 	"dependencies": {
 		"taketalk": "^1.0.0"
 	},
 	"devDependencies": {
-		"mocha": "^3.4.0",
-		"xo": "^0.18.0"
-	},
-	"xo": {
-		"space": true
+		"eslint": "^5.16.0",
+		"eslint-config-standard": "^12.0.0",
+		"eslint-plugin-import": "^2.16.0",
+		"eslint-plugin-node": "^8.0.1",
+		"eslint-plugin-promise": "^4.1.1",
+		"eslint-plugin-standard": "^4.0.0",
+		"mocha": "^6.1.1",
+		"standard": "^12.0.1"
 	}
 }
